# NetCpp

./: .gitignore  CMakeLists.txt  README.md
UnitTests/: Makefile  httpclient.cpp  httpserver.cpp  tcpclient.cpp  tcpserver.cpp
include/nc/: socket.hpp
src/: socket.cpp
